# bridge-wrangler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: check-dependencies.yml  ci.yml  release.yml
src/: main.rs
src/commands/: analyze.rs  block_replicate.rs  event.rs  filter.rs  mod.rs  rotate_deals.rs  to_lin.rs  to_pdf.rs
tests/: run_integration.sh
tests/fixtures/expected/: ABS2-2 - NES.lin  ABS2-2 - NES.pbn  ABS2-2 - NESW.lin  ABS2-2 - NESW.pbn  ABS2-2 - NS.lin  ABS2-2 - NS.pbn  ABS2-2 - S.lin  ABS2-2 - S.pbn  ABS2-2-4x9.pbn
tests/fixtures/input/: ABS2-2 - 4x9.pbn  ABS2-2.pbn
