[package]
name = "bridge-wrangler"
version = "0.1.0"
edition = "2021"
description = "CLI tool for operations on bridge PBN files"
license = "Unlicense"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bridge-parsers = { path = "../Bridge-Parsers" }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
